--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "action-types",
+  "name": "resource-action-types",
   "version": "1.0.0",
   "description": "extended crud action types for redux actions",
   "main": "index.js",
-  "scripts": {
-    "test": "jest src"
-  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/l2silver/action-types.git"
+    "url": "git+https://github.com/l2silver/resource-action-types.git"
   },
   "keywords": [
     "redux",
-    "action-types"
+    "resource-action-types"
   ],
   "author": "Leigh Silverstein",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/l2silver/action-types/issues"
+    "url": "https://github.com/l2silver/resource-action-types/issues"
   },
-  "homepage": "https://github.com/l2silver/action-types#readme",
+  "homepage": "https://github.com/l2silver/resource-action-types#readme",
   "dependencies": {
     "decamelize": "^1.2.0",
     "pluralize": "^4.0.0"
