--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "resource-action-types",
   "version": "1.0.1",
   "description": "extended crud action types for redux actions",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/l2silver/resource-action-types.git"
+  },
+  "scripts": {
+    "clean": "rm -rf dist",
+    "build": "babel src --out-dir dist",
+    "type": "flow-copy-source -v src dist --ignore '*.test.*'",
+    "prepublish": "npm run clean && npm run build && npm run type"
   },
   "keywords": [
     "redux",
@@ -20,5 +26,12 @@
   "dependencies": {
     "decamelize": "^1.2.0",
     "pluralize": "^4.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "flow-copy-source": "^1.1.0"
   }
 }
